Try to fix image overflow and footer problem

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ p {
 }
 
 main {
-    margin-bottom: 70px;
+    margin-bottom: 15%;
 }
 
 footer {
@@ -45,7 +45,7 @@ footer {
     color: white;
     padding: 10px;
     text-align: center;
-    height: 60px;
+    height: 10%;
     position: fixed;
     bottom: 0px;
     left: 0px;
@@ -101,7 +101,7 @@ img {
 }
 
 .festival-item > img {
-    width: 300px;
+    width: 80%;
     border-radius: 10px 10px 0 0;
     filter: opacity(70%);
     -webkit-filter: opacity(70%);
@@ -131,7 +131,7 @@ img {
 }
 
 .grid-container > img {
-    width: 350px;
+    width: 80%;
 }
 
 @media all and (min-width: 880px){
